# waifu2x-gui

./: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/Environment/: container.tsx  presenter.tsx
src/components/FileContainer/: container.tsx  presenter.tsx
src/components/FileConvertForm/: container.tsx  presenter.tsx
src/components/FileIoForm/: container.tsx  presenter.tsx
src/components/FileList/: container.tsx  presenter.tsx
src/components/FileListForm/: container.tsx  presenter.tsx
src/components/FileProgress/: container.tsx  presenter.tsx
src/components/FormItemValue/: container.tsx  presenter.tsx
src/components/Layout/: container.tsx  presenter.tsx
src/components/Settings/: container.tsx  presenter.tsx
src/globalState/: atoms.ts
src/hooks/: index.ts  useEnvironment.ts  useFileName.ts  useGlobalState.ts  useSecureDir.ts  useTargetFiles.ts  useWaifu2x.ts
src/pages/ConverterPage/: container.tsx  presenter.tsx
src/pages/EnvironmentPage/: container.tsx  presenter.tsx
src/pages/SettingsPage/: container.tsx  presenter.tsx
src/types/: FileDataDto.ts  SecureDirType.ts  SettingCacheKey.ts  Waifu2xBinaryPaths.ts  index.ts
